# tether-gossip

./: Cargo.toml  README.md  clippy.toml  main.rs
agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
src/: lib.rs  main.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac7.rs  mocks.rs  proptest_invariants.rs
tests/mocks/: ac6.rs
